# otus_1

./: .gitignore  Untitled.ipynb  requirements-dev.txt  requirements.txt
homework_01/: Untitled.ipynb  main.py
homework_02/: 111.py  4444444444444.py  README.md  __init__.py  base.py  base_old.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main_003.py  main_03.py  main_old.py  pyproject.toml  requirements.txt
homework_03/03_test/: Dockerfile  helloworld.py
homework_03/blogproject/: items_views.py  main.py
homework_03/blogproject/users/: crud.py  dependencies.py  schemas.py
homework_03/users/: api.py
homework_04/: __init__.py  docker-compose.yaml  jsonplaceholder.py  jsonplaceholder_requests.py  main.py  main_orig.py  models.py  postgres.env  requirements.txt
homework_05/: README.md  __init__.py  app.py  requirements.txt
homework_05/templates/: about.html  base.html  index.html
homework_06/: README.md  docker-compose.yaml
homework_06/docker-build/shop/: Dockerfile
homework_06/docker-build/web/: Dockerfile
homework_06/shop-app/: app.py  config.py
homework_06/shop-app/models/: products.py
homework_06/shop-app/static/js/: product-details.js
homework_06/shop-app/templates/products/: add.html  details.html  list.html
homework_06/shop-app/views/: products.py
homework_06/web/: Dockerfile  app.py  requirements.txt
homework_old_04/: README.md  jsonplaceholder_requests.py  main.py  models.py
testing/test_homework_04/: conftest.py  test_main.py
testing/test_homework_05/: test_app.py
(+2 files in other folders)
