[tool.poetry]
name = "blogproject"
version = "0.1.0"
description = ""
authors = ["pbx1010 <itinsideru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
